# kardbrd-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile.agent  LICENSE  README.md  docker-compose.yml  pyproject.toml
kardbrd_client/: __init__.py  agent.py  client.py  logging_config.py  mcp_server.py  runner.py  tool_executor.py  tool_schemas.py  tools.py  triggers.py  websocket_agent.py
kardbrd_client/tests/: __init__.py  test_directory_state.py  test_mcp_server.py  test_runner.py  test_trigger_context.py  test_websocket_agent.py
